[package]
name = "tokio-postgres-rustls"
description = "Rustls integration for tokio-postgres"
version = "0.14.0"
authors = ["Jasper Hugo <jasper@jasperhugo.com>"]
repository = "https://github.com/jbg/tokio-postgres-rustls"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
const-oid = { version = "0.9.6", default-features = false, features = ["db"] }
rustls = { version = "0.23", default-features = false }
rustls-platform-verifier = { version = "0.6" }
sha2 = { version = "0.10", default-features = false }
tokio = { version = "1", default-features = false }
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime"] }
tokio-rustls = { version = "0.26", default-features = false }
x509-cert = { version = "0.2.5", default-features = false, features = ["std"] }

[dev-dependencies]
env_logger = { version = "0.11", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
tokio-postgres = { version = "0.7", default-features = false, features = [
  "runtime",
] }
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "logging",
  "tls12",
  "aws-lc-rs",
] }
